Contain width of user-definable content, to avoid potential layout breakage

--- a/src/assets/sass/modules/_layout-shared.scss
+++ b/src/assets/sass/modules/_layout-shared.scss
@@ -103,6 +103,17 @@ progress {
 }
 
 /**
+ * Contain width of user-definable content, to avoid potential layout breakage.
+ */
+
+.txp-contain {
+    max-width: 30em; // 360px / 12px
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+/**
  * Drop down lists.
  *
  * 1. Ensure dropdowns are hidden at page load (prevents content 'jumping').
